<resources>
    <string name="app_name">Vodafone UAT</string>

    <string name="service_loading_fail"></string>
    <string name="service_loading_fail_invaliduser">Invalid username or password</string>
    <string name="login_fail">Login Failed</string>
    <string name="sign_in_with_your_existing_account">Sign in with your existing account</string>
    <string name="passwordreset">Reset your password with email</string>
    <string name="resendCodeString">Resend Verification Code with email</string>
    <string name="email_address">Email address</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="resend_code">Resend Verification Code</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="reset_pw">Reset</string>
    <string name="register">Create User</string>
    <string name="contacts_us">Contacts us</string>
    <string name="register_header">Please provide the following details</string>
    <string name="user_type_select">Please select user type</string>
    <string name="user_store_select">Please select store</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_resend__code">Resend_Code</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
