<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_gradiant"
        tools:context=".login.LoginActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">



        <TextView
                android:id="@+id/lblSignin"
                android:text="@string/sign_in_with_your_existing_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                />

        <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:ems="10"
                android:textSize="14sp"
                android:importantForAutofill="no"
                android:background="@drawable/rounded_corner_textfild"
                android:hint="@string/email_address"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/lblSignin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        <TextView
                android:id="@+id/txt_forgot_password"
                android:text="@string/forgot_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:padding="15dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_email"
                app:layout_constraintLeft_toLeftOf="parent"
                />

        <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="14sp"
                android:ems="10"
                android:importantForAutofill="no"
                android:background="@drawable/rounded_corner_textfild"
                android:hint="@string/password"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

    <Button
            android:id="@+id/btn_signup"
            android:text="@string/sign_in"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@drawable/leaderbord_cell_background"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
    />

    <TextView
            android:id="@+id/txt_donthve_account1"
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
    />
    <TextView
            android:id="@+id/txt_donthve_signupnow"
            android:text="@string/sign_up_now"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:layout_gravity="center_horizontal"
    />
    <TextView
        android:id="@+id/txt_donthve_resend_code"
        android:text="@string/resend_code"
        android:layout_width="wrap_content"
        android:textSize="10sp"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
    </ScrollView>

    <com.fitscorp.sl.apps.common.ProgressAyubo
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:layout_centerInParent="true" />


</androidx.constraintlayout.widget.ConstraintLayout>